--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: var(--main_font);
 }
 
 body{
     background-color: #0B0E13 !important;
+    scroll-behavior: smooth !important;
 }
 
 :root{
@@ -19,12 +21,30 @@ body{
     --roboto:'Roboto', sans-serif;
     --poppins:'Poppins', sans-serif;
 }
-
+::-webkit-scrollbar-thumb{
+    background-color: var(--main_color);
+    border-radius: 0.625rem;
+}   
+::-webkit-scrollbar-track{
+    background-color: var(--dark);
+}
+::-webkit-scrollbar{
+    background-color: var(--dark);
+    width: 0.625rem;
+}
 
 a{
     text-decoration: none !important;
 }
-
+.special_color{
+    color: var(--golden)
+}
+.special_main_color{
+    color: var(--main_color)
+}
+.btn-close{
+    display:none;
+}
 
 @media screen and (max-width:768px) {
     body,html{
