--- a/src/Components/Ui/MainButton.module.css
+++ b/src/Components/Ui/MainButton.module.css
@@ -1,15 +1,14 @@
 .sign_button{
     background-color: transparent;
-    padding: 10px 20px;
+    padding: 0.625rem 1.25rem;
     text-align: center;
     background-image: url(../../images/btn-bg.svg);
     background-size: cover;
     background-repeat: no-repeat;
-    min-width: 157px;
-    min-height: 48px;
-    font-size: 15px;
+    min-width: 9.8125rem;
+    min-height: 3rem;
+    font-size: 0.9375rem;
     color: white;
-    font-family: var(--main_font);
     font-weight: 800;  
     display: flex;
     justify-content: center;
