--- a/src/Components/Ui/MainButtonWhite.module.css
+++ b/src/Components/Ui/MainButtonWhite.module.css
@@ -1,7 +1,7 @@
 .white_button{
     background-color: var(--main_color);
     color: rgb(49, 49, 49);
-    padding:15px 25px;
+    padding:0.9375rem 1.5625rem;
     font-family: var(--poppins);
     font-size: 1.125rem;
     font-weight: 700;
@@ -24,14 +24,14 @@
     position: absolute;
     left: -14.5%;
     top: -20%;
-    width: 65px;
+    width: 4.0625rem;
     transition: left .2s;
 }
 .arrow_right{
     position: absolute;
     right: -14.5%;
     top: -20%;
-    width: 65px;
+    width: 4.0625rem;
     transform: rotate(180deg);
     transition: right .2s;
 }
