--- a/src/Components/Ui/ScrollButton.module.css
+++ b/src/Components/Ui/ScrollButton.module.css
@@ -1,14 +1,14 @@
 .btn{
     background-color: var(--main_color);
-    width: 50px;
-    height: 50px;
-    border-radius: 10px;
-    padding: 10px;
+    width: 3.125rem;
+    height: 3.125rem;
+    border-radius: 0.625rem;
+    padding: 0.625rem;
     position: fixed;
-    bottom: 10px;
-    right: 10px;
+    bottom: 0.625rem;
+    right: 0.625rem;
     color: black;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 900;
     z-index: 2;
     transition: background-color .3s;
