--- a/src/Components/Form/LoginForm.module.css
+++ b/src/Components/Form/LoginForm.module.css
@@ -1,11 +1,13 @@
 .form{
-    padding: 10px;
+    padding: 0.625rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 50%;
+    overflow: hidden;
 }
+
 .input_filed{
     width: 100%;
     position: relative;
@@ -13,27 +15,27 @@
 }
 .input_filed input{
     width: 100%;
-    padding: 20px;
-    border-radius: 5px;
+    padding: 1.25rem;
+    border-radius: 0.3125rem;
     background-color: transparent;
     color:rgb(189, 189, 189);
-    border: 1px solid var(--gray);
+    border: 0.0625rem solid var(--gray);
 }
 .input_filed::after{
     content: "";
-    width: 40px;
-    height: 40px;
+    width: 2.5rem;
+    height: 2.5rem;
     background-color: #0B0E13;
-    border: 1px solid var(--gray);
+    border: 0.0625rem solid var(--gray);
     position: absolute;
-    bottom: -20px;
-    right: -20px;
+    bottom: -1.25rem;
+    right: -1.25rem;
     rotate: 45deg;
 }
 
 .or_span{
     font-weight: 700;
-    margin-top: 30px;
+    margin-top: 1.875rem;
     font-family: var(--poppins);
     color: white;
     transition: color .5s;
@@ -41,22 +43,22 @@
 }
 .or_span::after{
     content: '';
-    width: 230px;
-    height: 1px;
+    width: 14.375rem;
+    height: 0.0625rem;
     background-color:var(--gray);
     position: absolute;
-    left: -230px;
+    left: -14.375rem;
     top: 50%;
     transition: all .5s;
 
 }
 .or_span::before{
     content: '';
-    width: 230px;
-    height: 1px;
+    width: 14.375rem;
+    height: 0.0625rem;
     background-color:var(--gray);
     position: absolute;
-    right: -230px;
+    right: -14.375rem;
     top: 50%;
     transition: all .5s;
 }
@@ -66,26 +68,44 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 0.625rem;
     width: 50%;
-    border-radius: 10px;
-    margin-top: 15px;
+    border-radius: 0.625rem;
+    margin-top: 0.9375rem;
     cursor: pointer;
     position: relative;
 }
 .login_ways_text{
     margin: 0;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.125rem;
     color:white;
 }
 .login_ways img{
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-right: 0.625rem;
 }
 .facebook{
-    margin-right: 10px;
-    font-size: 18px;
+    margin-right: 0.625rem;
+    font-size: 1.125rem;
     color: #4467b1;
+}
+
+@media screen and (max-width:1115px) {
+    .login_ways{
+        width:80%;
+    }
+
+}
+@media screen and (max-width:768px) {
+    .form{
+        width: 80%;
+    }
+
+}
+@media screen and (max-width:330px) {
+    .form{
+        width: 90%;
+    }
 }
