--- a/src/Components/Ui/MainTitle.module.css
+++ b/src/Components/Ui/MainTitle.module.css
@@ -2,14 +2,15 @@
 .login_caption{
     text-align: center;
     width: 100%;
-    margin-top: 50px;
+    margin-top: 3.125rem;
+    margin-bottom:1.875rem;
     position: relative;
 }
 .login_caption h2{
-    font-size: 100px;
+    font-size: 6.25rem;
     font-weight: 900;
     color: #0B0E13;
-    text-shadow: -1px 1px 5px rgb(145, 144, 144);
+    text-shadow: -0.0625rem 0.0625rem 0.3125rem rgb(145, 144, 144);
     opacity: .5;
     font-family: var(--roboto);
     position: absolute;
@@ -17,10 +18,19 @@
     left: 50%;
     transform: translate(-50%,-50%);
     z-index: -1;
+    width:100%;
 }
 .login_caption h4{
-    font-size: 60px;
+    font-size: 3.75rem;
     font-weight: 900;
     color: white;
-    
+}
+
+@media screen and (max-width:768px) {
+    .login_caption h2{
+        font-size: 5rem;
+    }
+    .login_caption h4{
+        font-size: 3.125rem;
+    }
 }
