finishing form with react query,formik,yup & design footer

--- a/src/Components/Ui/MainButtonWhite.module.css
+++ b/src/Components/Ui/MainButtonWhite.module.css
@@ -12,7 +12,7 @@
     position: relative;
 }
 .white_button:hover{
-    background-color:white;
+    background-color:var(--golden);
 }
 .white_button:hover .arrow_left {
     left: -20%;
